k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-web-site-default
spec:
  selector:
    matchLabels:
      app: web-site-default
  template:
    metadata:
      labels:
        app: web-site-default
    spec:
      containers:
        - name: web-site-default
          image: nginx:1.27.3
          resources: {}
          ports:
            - containerPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-web-site1
spec:
  selector:
    matchLabels:
      app: web-site1
  template:
    metadata:
      labels:
        app: web-site1
    spec:
      containers:
        - name: web-site1
          image: httpd:2.4.62
          resources: {}
          ports:
            - containerPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-web-site2
spec:
  selector:
    matchLabels:
      app: web-site2
  template:
    metadata:
      labels:
        app: web-site2
    spec:
      containers:
        - name: web-site2
          image: ivanjuniordocker/tomcat-index:1.0
          resources: {}
          ports:
            - containerPort: 8080
