k8s/ingress-default-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-default
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: service-web-site-default
      port:
        number: 80
---
