k8s/ingress-host-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
spec:
  ingressClassName: nginx
  # Regras baseadas em host
  rules:
    - host: site1.ivanjunior.site
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-web-site1
              port:
                number: 80
    - host: site2.ivanjunior.site
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-web-site2
              port:
                number: 80
---
