k8s/ingress-path-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  # Regras baseadas em path
  rules:
    - http:
        paths:
          - path: /site1
            pathType: Prefix
            backend:
              service:
                name: service-web-site1
                port:
                  number: 80
          - path: /site2
            pathType: Prefix
            backend:
              service:
                name: service-web-site2
                port:
                  number: 80
